--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["jiangplus <jiang.plus.times@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+clap = "2.33.3"
 rust-s3 = "0.22.12"
 url = "2.1.1"
 md5 = "0.7.0"
